# LoRA-Model-Editing

./: README.md  gpu_config.yaml  main.py  pyproject.toml  requirements.txt
configs/: config.yaml  config_lora_compensatory.yaml
datasets/: chatgpt_fact_dataset_100.json  chatgpt_fact_dataset_test.json  generate_dataset.py
lib/loralib/: layers.py  utils.py
lib/transformer_lens/: loading_from_pretrained.py  utils.py
lora_compensation/: hooked_lora.py  hooking.py  lora_compensatory.ipynb  lora_compensatory.py  lora_compensatory2.ipynb  results.ipynb
src/: ablations.py  activation_graft.py  correction_dataset.py  data_utils.py  model.py  utils.py
src/training/: evaluate.py  gpt2_ft.py  optimizer.py  train.py
